@@ -427,17 +427,28 @@ endif
 
 draw_yoshi_coins:
     ; Check if we need to draw the Yoshi Coins.
-    lda #$00 : xba
+    sep #$10
     lda $13BF|!addr : and #$07 : tay
     lda.w .mask,y : sta $02
     lda $13BF|!addr : lsr #3 : tay
-    lda $1F2F|!addr,y : and $02 : beq +
-    ldy.w #2*(5-1)
-    bra .draw
-+   lda $1422|!addr : beq .return
-    dec : asl : tay
+    lda $1F2F|!addr,y : and $02 : beq .not_all
+    jsr get_total_dc_amount
+    bne .shared
+    rts
 
-.draw:
+.not_all:
+    lda $1422|!addr : beq .return
+
+.shared:
+    rep #$10
+
+    ; $0F = amount of tiles to draw
+    dec : sta $0F
+
+    ; $0D = starting XY position
+    lda.b #!dc_counter_x_pos : sta $0D
+    lda.b #!dc_counter_y_pos : sta $0E
+
     ; Yoshi Coin tile is one tile to the right.
     inc $00
 
@@ -445,7 +456,8 @@ draw_yoshi_coins:
 if !maxtile
     ldx !maxtile_buffer_max+0 : cpx !maxtile_buffer_max+8 : beq .return
     rep #$20
-    lda.w .pos,y : sta $400000,x
+    lda $0D : sta $400000,x
+    clc : adc.w #$0008 : sta $0D
     lda $00 : sta $400002,x
     sep #$20
     dex #4 : stx !maxtile_buffer_max+0
@@ -455,7 +467,8 @@ if !maxtile
 else
     jsr get_free_slot
     rep #$20
-    lda.w .pos,y : sta $0200|!addr,x
+    lda $0D : sta $0200|!addr,x
+    clc : adc.w #$0008 : sta $0D
     lda $00 : sta $0202|!addr,x
     phx
     txa : lsr #2 : tax
@@ -464,18 +477,39 @@ else
     plx
     inx #4
 endif
-    dey #2 : bpl .loop
+    dec $0F : bpl .loop
+
 .return:
     rts
 
 .mask:
     db $80,$40,$20,$10,$08,$04,$02,$01
 
-.pos:
-    db $00+!dc_counter_x_pos,!dc_counter_y_pos
-    db $08+!dc_counter_x_pos,!dc_counter_y_pos
-    db $10+!dc_counter_x_pos,!dc_counter_y_pos
-    db $18+!dc_counter_x_pos,!dc_counter_y_pos
-    db $20+!dc_counter_x_pos,!dc_counter_y_pos
+get_total_dc_amount:
+    ; If CMP #$XX, return $XX
+    lda.l !rom_dc_amount_cmp_byte : cmp #$C9 : bne .hijack
+    lda.l !rom_dc_amount_cmp_byte+1
+    rts
+
+.hijack:
+    ; If detecting the "Per Level Yoshi Coins" patch,
+    ; use it to load the DC amount for this level.
+    lda.l !rom_dc_perlevel_patch_byte : cmp #$22 : bne .default
+
+    ; We get the DC per-level amount table address from the patch address + 8
+    ; (assuming people don't edit the patch...)
+    lda.l !rom_dc_perlevel_patch_byte+3 : sta $0F
+    rep #$20
+    lda.l !rom_dc_perlevel_patch_byte+1 : clc : adc.w #$0008 : sta $0D
+    lda [$0D] : sta $0D
+    sep #$20
+    ldy $13BF|!addr
+    lda [$0D],y
+    rts
+
+.default:
+    ; If detection failed, load the default amount.
+    lda.b #!default_dc_amount
+    rts
 
 endif
