@@ -1,20 +1,22 @@
 ; Defines for useful ROM addresses
 ; Most of them are used to check for the presence and hijack different tools and patches.
-!rom_death_pose                    = $00D0B9|!bank
-!rom_death_song                    = $00F60B|!bank
-!rom_timer_ticks                   = $008D8B|!bank
-!rom_green_star_block_count        = $0091AC|!bank
-!rom_yoshi_tongue_extend_speed     = $01F319|!bank
-!rom_lm_version                    = $0FF0B4|!bank
-!rom_lm_get_screen_routine         = $03BCDC|!bank
-!rom_objectool_byte                = $0DA106|!bank
-!rom_objectool_normal_code_address = $0DA107|!bank
-!rom_amk_byte                      = $008075|!bank
-!rom_dcsave_byte                   = $05D7AB|!bank
-!rom_dcsave_init_address           = $05D7AC|!bank
-!rom_dcsave_midpoint_byte          = $00CA2B|!bank
-!rom_dcsave_midpoint_address       = $00CA2C|!bank
-!rom_sprite_load_orig              = $01AC9F|!bank
-!rom_initial_submap                = $009EF0|!bank
-!rom_sprite_19_fix_byte            = $01E762|!bank
-!rom_sumo_bro_lightning_y_speed    = $02DEB6|!bank
+!rom_death_pose                    #= $00D0B9|!bank
+!rom_death_song                    #= $00F60B|!bank
+!rom_timer_ticks                   #= $008D8B|!bank
+!rom_green_star_block_count        #= $0091AC|!bank
+!rom_yoshi_tongue_extend_speed     #= $01F319|!bank
+!rom_lm_version                    #= $0FF0B4|!bank
+!rom_lm_get_screen_routine         #= $03BCDC|!bank
+!rom_objectool_byte                #= $0DA106|!bank
+!rom_objectool_normal_code_address #= $0DA107|!bank
+!rom_amk_byte                      #= $008075|!bank
+!rom_dcsave_byte                   #= $05D7AB|!bank
+!rom_dcsave_init_address           #= $05D7AC|!bank
+!rom_dcsave_midpoint_byte          #= $00CA2B|!bank
+!rom_dcsave_midpoint_address       #= $00CA2C|!bank
+!rom_sprite_load_orig              #= $01AC9F|!bank
+!rom_initial_submap                #= $009EF0|!bank
+!rom_sprite_19_fix_byte            #= $01E762|!bank
+!rom_sumo_bro_lightning_y_speed    #= $02DEB6|!bank
+!rom_dc_amount_cmp_byte            #= $00F349|!bank
+!rom_dc_perlevel_patch_byte        #= $00F346|!bank
